<resources>
    <string name="app_name">Just Eat-it for Businesses</string>
    <string name="title_home">Home</string>
    <string name="title_discover">Discover</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="title_welcome_back">Welcome Back</string>
    <string name="title_welcome">Welcome</string>
    <string name="exclaim">!</string>
    <string name="title_email">E-mail</string>
    <string name="title_password">Password</string>
    <string name="title_signIn">Sign in</string>
    <string name="title_signIn_"><u>Sign in</u></string>
    <string name="title_signUp">Sign up</string>
    <string name="search_hint">Search…</string>
    <string name="title_signUp_"><u>Sign up</u></string>
    <string name="title_forgotPassword">Forgot Password</string>
    <string name="title_resetPassword">Reset Password</string>
    <string name="title_forgotPassword_"><u>Forgot Password</u></string>
    <string name="title_createAccount">Create Account</string>
    <string name="title_name">Name</string>
    <string name="title_empty_input">No field should be left empty</string>
    <string name="title_password_too_short">Password must be at least %d characters</string>
    <string name="title_not_a_valid_email">E-mail address must be valid</string>
    <string name="title_registration_successful">Successfully registered account</string>
    <string name="title_empty_email">Please provide a email address!</string>
    <string name="email_sent">E-mail sent!</string>
    <string name="email_sent_msg">We just sent a password reset e-mail to this e-mail address!</string>
    <string name="title_account">My account</string>
    <string name="title_settings">My settings</string>
    <string name="title_log_out">LOGOUT</string>
    <string name="title_test_email">abugewazenith@gmail.com</string>
    <string name="title_dark_mode">Dark Mode</string>
    <string name="title_track_orders">Track Orders</string>
    <string name="title_address_book">Address Book</string>
    <string name="title_saved_items">Saved Items</string>
    <string name="title_order_history">Order History</string>
    <string name="title_light_theme">Enable Light Theme</string>
    <string name="title_save">Save Details</string>
    <string name="title_update_my_details">Update Details</string>
    <string name="title_update">Update My Details</string>
    <string name="title_successfully_updated_details">Details Updated!</string>
    <string name="title_details_updated">You have successfully updated your account details.</string>
    <string name="title_my_wallet">My Wallet</string>
    <string name="title_added_to_favorites">Added to Favorites!</string>
    <string name="title_removed_from_favorites">Removed from Favorites!</string>
    <string name="title_added_to_shopping_bag">Added to Bag!</string>
    <string name="title_removed_from_shopping_bag">Removed from Bag!</string>
    <string name="title_empty_favorites">You haven\'t added anything to your favorites</string>
    <string name="title_signIn_to_continue">Log in to continue!</string>
    <string name="title_activity_details">Details_Activity</string>
    <string name="title_activity_cart">Cart_Activity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="todo">TODO</string>
    <string name="title_details">Details</string>
    <string name="title_to_shoppingBag">ADD TO BAG</string>
    <string name="enter_comment">Add a comment…</string>
    <string name="title_comments"><u>Comments</u></string>
    <string name="title_cart">Cart</string>
    <string name="title_likes">likes</string>
    <string name="title_insufficient_stock">Desired quantity is greater than available stock!</string>
    <string name="title_out_of_stock">Out Of Stock!</string>
    <string name="title_unknown_error_occurred">An unknown error occurred</string>
    <string name="title_naira_sign">₦</string>
    <string name="title_shipping_fee">+ shipping fee ₦</string>
    <string name="title_product_stock">Only %d left in stock!</string>
    <string name="title_like">"liked by %d person"</string>
    <string name="title_error_loading">Error occurred while retrieving product details!</string>
    <string name="comments">Comments</string>
    <string name="title_my_addresses">My Addresses</string>
    <string name="title_edit_address">Edit Address</string>
    <string name="title_back_button">Back Button</string>
    <string name="title_residential_address">Residential address</string>
    <string name="title_enter_address">Please enter your current address</string>
    <string name="title_street_address">Street address</string>
    <string name="title_apt_suite">Apt, Suite, Bldg #</string>
    <string name="title_postcode">Postcode or city</string>
    <string name="title_next">Next</string>
    <string name="title_additional_phone">Line 2 (optional)</string>
    <string name="title_phone_number">Phone number</string>
    <string name="title_save_address">Save</string>
    <string name="title_unavailable">This service is not supported in your region! :(</string>
    <string name="title_important">* Field cannot be left blank!</string>
    <string name="title_address_saved_successfully">Address saved successfully!</string>
    <string name="title_deleted">Deleted!</string>
    <string name="title_empty_address">Your haven\'t saved any credit/debit cards!</string>
    <string name="title_about">About</string>
    <string name="title_feedback">Feedbacks</string>
    <string name="title_help">Help</string>
    <string name="title_just_eat_it">"Just Eat it from Ari_D: Copyright © 2022. All Rights Reserved."</string>
    <string name="title_hi">Hi I\'m …</string>
    <string name="title_btn_delete">Delete comment</string>
    <string name="title_my_orders">Order History</string>
    <string name="title_delivered">Delivered</string>
    <string name="title_your_feedback">Your feedback matters! Help us</string>
    <string name="title_improve">improve the Just Eat - it app</string>
    <string name="title_rating_bar">Rating Bar</string>
    <string name="title_good">Good</string>
    <string name="title_glad_to_hear">Glad to hear. We\'re always trying to get better.</string>
    <string name="title_improve_">What could we improve?</string>
    <string name="title_please">Please tell us more…</string>
    <string name="title_to_help">to help. Visit the <u>Help Center.</u></string>
    <string name="title_questions">Questions or concerns? We are here</string>
    <string name="title_share_with">Share with Just Eat - it</string>
    <string name="title_provide">Please provide more info in order to submit your feedback!</string>
    <string name="title_poor">Very bad :(</string>
    <string name="title_bad">Bad</string>
    <string name="title_fair">Fair</string>
    <string name="title_excellent">Excellent : )</string>
    <string name="title_submitting_rating">Submitting feedback…</string>
    <string name="title_empty">…</string>
    <string name="title_in_stock">In stock!</string>
    <string name="title_no_likes">No likes</string>
    <string name="title_my_shopping_bag">My shopping bag</string>
    <string name="title_subtotal">Subtotal:</string>
    <string name="title_checkout">Checkout</string>
    <string name="title_delivery_address">Delivery address</string>
    <string name="title_progress">Progress</string>
    <string name="title_btn_summary">Summary Button</string>
    <string name="title_add_address">Create a new address</string>
    <string name="title_delete">Delete</string>
    <string name="title_total">Total:</string>
    <string name="title_payment">Payment methods</string>
    <string name="title_transactions">Other payment options</string>
    <string name="title_default">Preferred delivery address</string>
    <string name="title_some_items_are_out_of_stock">Some items in your shopping bag are out of stock!</string>
    <string name="title_now_default">Now default address!</string>
    <string name="title_set">Set as preferred delivery address</string>
    <string name="title_tap_to_pay_credit">Tap on any card to complete your transaction</string>
    <string name="payment_prompt">Card details</string>
    <string name="card_number">Card Number</string>
    <string name="card_expiry">Card Expiry</string>
    <string name="card_cvv">CVV</string>
    <string name="secured_by_paystack">Secured by Paystack</string>
    <string name="title_save_card">Save payment method</string>
    <string name="card_name">Card Holder\'s Name</string>
    <string name="title_empty_cardNumber">Card number cannot be empty!</string>
    <string name="title_empty_card_name">Card holder\'s name cannot be empty!</string>
    <string name="title_empty_cardExpiry">Card expiry date cannot be empty!</string>
    <string name="title_empty_cardCVV">Card CVV cannot be empty!</string>
    <string name="title_wallet_delete">Payment method deleted</string>
    <string name="title_invalid_card_number">Invalid card number!</string>
    <string name="title_invalid_card_date">Invalid card expiry date!</string>
    <string name="title_invalid_cardCVV">Invalid card CVV!</string>
    <string name="title_order_successful">Your purchase was successful!</string>
    <string name="title_payment_unsuccessful">An error occurred with this payment method</string>
    <string name="title_transfer_done">I\'ve sent the money</string>
    <string name="title_copy">Copy</string>
    <string name="title_payment_with_transfer">Paid with bank transfer.</string>
    <string name="title_pay_on_delivery">Pay on delivery.</string>
    <string name="title_copy_to_clipboard">Copied to clipboard!</string>
    <string name="title_pending">Pending</string>
    <string name="title_order_id">Order  ID -  #</string>
    <string name="title_clear_cart">Clear shopping bag</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_orders">Orders</string>
    <string name="title_confirmed_orders">Confirmed Orders</string>
    <string name="title_products">Products</string>
    <string name="title_create_products">Create Products</string>
    <string name="title_scrollview">Scrollview</string>
    <string name="title_options">Options</string>
    <string name="title_ambergris">Ambergris</string>
    <string name="title_24_products">24 products on store</string>
    <string name="title_interactions"><u>Interactions</u></string>
    <string name="title_product_likes">Products\' likes:</string>
    <string name="title_product_comments">Products\' comments:</string>
    <string name="title_product_unconfirmed">Unconfirmed revenue:</string>
    <string name="title_324_500">₦ 324, 500</string>
    <string name="title_product_likes_no">67</string>
    <string name="title_product_comments_no">12</string>
    <string name="title_unconfirmed_orders">16 unconfirmed orders</string>
    <string name="title_confirmed_orders_no">79 confirmed orders</string>
    <string name="title_product_confirmed">Confirmed revenue:</string>
    <string name="title_124_600">₦ 124, 600</string>
    <string name="title_analytics"><u>Analytics</u></string>
    <string name="title_highest_sales_day">Highest sales day: Sunday</string>
    <string name="title_hamburger">Hamburger</string>
    <string name="title_X3">X3</string>
    <string name="title_240000">₦ 2400.00</string>
    <string name="title_OrderID5930323f_af4">Order ID - #5930323f-af4</string>
    <string name="title_Orderedby">Ordered by -</string>
    <string name="title_Jonathan_Casey">Jonathan Casey</string>
    <string name="title_OrderedOn">Ordered on - 13/4/2022 12:02:14</string>
</resources>