<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ari_d.justeat_itforbusinesses.ui.Main.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.ari_d.justeat_itforbusinesses.ui.Main.orders.OrdersFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/navigation_confirmed_orders"
        android:name="com.ari_d.justeat_itforbusinesses.ui.Main.confirmed_orders.ConfirmedOrdersFragment"
        android:label="@string/title_confirmed_orders"
        tools:layout="@layout/fragment_confirmed_orders" />

    <fragment
        android:id="@+id/navigation_products"
        android:name="com.ari_d.justeat_itforbusinesses.ui.Main.products.fragments.Products"
        android:label="@string/title_products"
        tools:layout="@layout/fragments_products" />

    <fragment
        android:id="@+id/navigation_create_products"
        android:name="com.ari_d.justeat_itforbusinesses.ui.Main.products.fragments.CreateProducts"
        android:label="@string/title_create_products"
        tools:layout="@layout/fragment_create_products" />
</navigation>