<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Main.home.HomeFragment">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:contentDescription="@string/title_scrollview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/main_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/title_layout"
                android:layout_width="match_parent"
                android:layout_height="107dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="9dp"
                android:layout_marginRight="8dp"
                android:background="@color/off_white"
                android:elevation="1dp">

                <TextView
                    android:id="@+id/store_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="9dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/lato"
                    android:text="@string/title_ambergris"
                    android:textColor="@color/black"
                    android:textSize="27sp"
                    app:layout_constraintLeft_toLeftOf="@+id/title_layout"
                    app:layout_constraintTop_toTopOf="@+id/title_layout" />

                <TextView
                    android:id="@+id/number_of_store_products"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="9dp"
                    android:layout_marginTop="49dp"
                    android:fontFamily="@font/lato"
                    android:text="@string/title_24_products"
                    android:textColor="@color/secondaryColor"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toLeftOf="@+id/title_layout"
                    app:layout_constraintTop_toTopOf="@+id/title_layout" />

                <ImageView
                    android:id="@+id/more_options"
                    android:layout_width="27dp"
                    android:layout_height="27dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/title_options"
                    android:src="@drawable/more_vert_fill1_wght700_grad0_opsz48"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/title_layout" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_alternates"
                android:text="@string/title_interactions"
                android:textColor="@color/black"
                android:textSize="23sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/interactions_layout"
                android:layout_width="match_parent"
                android:layout_height="136dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="9dp"
                android:layout_marginRight="8dp"
                android:background="@color/off_white"
                android:elevation="1dp">

                <TextView
                    android:id="@+id/product_likes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="9dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/title_product_likes"
                    android:textColor="@color/secondaryColor"
                    android:textSize="14sp"
                    app:layout_constraintLeft_toLeftOf="@id/interactions_layout"
                    app:layout_constraintTop_toTopOf="@id/interactions_layout" />

                <TextView
                    android:id="@+id/product_likes_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="110dp"
                    android:layout_marginTop="9dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/title_product_likes_no"
                    android:textColor="@color/accent"
                    android:textSize="16sp"
                    app:layout_constraintLeft_toLeftOf="@id/interactions_layout"
                    app:layout_constraintTop_toTopOf="@id/interactions_layout" />

                <TextView
                    android:id="@+id/product_comments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="9dp"
                    android:layout_marginTop="35dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/title_product_comments"
                    android:textColor="@color/secondaryColor"
                    android:textSize="14sp"
                    app:layout_constraintLeft_toLeftOf="@id/interactions_layout"
                    app:layout_constraintTop_toTopOf="@id/interactions_layout" />

                <TextView
                    android:id="@+id/product_comments_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="151dp"
                    android:layout_marginTop="33dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/title_product_comments_no"
                    android:textColor="@color/accent"
                    android:textSize="16sp"
                    app:layout_constraintLeft_toLeftOf="@id/interactions_layout"
                    app:layout_constraintTop_toTopOf="@id/interactions_layout" />

                <TextView
                    android:id="@+id/products_unconfirmed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="9dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/lato"
                    android:text="@string/title_product_unconfirmed"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintLeft_toLeftOf="@id/interactions_layout"
                    app:layout_constraintTop_toBottomOf="@id/product_comments" />

                <TextView
                    android:id="@+id/unconfirmed_revenue_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="9dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/alegreya"
                    android:text="@string/title_324_500"
                    android:textColor="@color/red"
                    android:textSize="20sp"
                    app:layout_constraintLeft_toLeftOf="@id/interactions_layout"
                    app:layout_constraintTop_toBottomOf="@id/products_unconfirmed" />

                <TextView
                    android:id="@+id/unconfirmed_orders"
                    android:layout_width="wrap_content"
                    android:layout_height="23dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="11dp"
                    android:fontFamily="@font/alegreya"
                    android:text="@string/title_unconfirmed_orders"
                    android:textColor="@color/red"
                    android:textSize="17sp"
                    app:layout_constraintRight_toRightOf="@id/interactions_layout"
                    app:layout_constraintTop_toTopOf="@id/interactions_layout" />

                <TextView
                    android:id="@+id/confirmed_orders"
                    android:layout_width="wrap_content"
                    android:layout_height="23dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="11dp"
                    android:fontFamily="@font/alegreya"
                    android:text="@string/title_confirmed_orders_no"
                    android:textColor="@color/green"
                    android:textSize="17sp"
                    app:layout_constraintRight_toRightOf="@id/interactions_layout"
                    app:layout_constraintTop_toBottomOf="@id/unconfirmed_orders" />

                <TextView
                    android:id="@+id/products_confirmed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/title_product_confirmed"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:fontFamily="@font/lato"
                    app:layout_constraintRight_toRightOf="@id/interactions_layout"
                    app:layout_constraintTop_toBottomOf="@id/product_comments" />

                <TextView
                    android:id="@+id/confirmed_revenue_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="27dp"
                    android:fontFamily="@font/alegreya"
                    android:text="@string/title_124_600"
                    android:textColor="@color/green"
                    android:textSize="20sp"
                    app:layout_constraintRight_toRightOf="@id/interactions_layout"
                    app:layout_constraintTop_toBottomOf="@id/products_unconfirmed" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>